# SoulDocFront

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  vercel.json
.github/workflows/: deploy.yml
deploy/server/: deploy_soulbook_front.sh
docs/superpowers/plans/: 2026-05-06-workspace-switcher-phase1.md
prototype/: ai-center.html  ai-tasks.html  ai-tools.html  api-console.js  change-request.html  developer.html  docs.html  editor.html  files.html  git-sync.html  index.html  install.html  language.html  login.html  members.html  nav.js  notifications.html  organization.html  profile.html  public-doc.html  search.html  seo.html  settings.html  space.html  spaces.html  style.css  tags.html  templates.html  versions.html  workspace.html
public/.well-known/: capabilities.json  skill-manifest.json
reference/docs/: 01-原型展示范围说明.md  02-接口清单.md  03-前后端模块拆解.md  04-数据库表结构设计.md  05-AI工具配置重构方案.md  06-技术栈建议（Rust预留）.md  07-V5收尾补全说明.md  08-SoulDocV5项目落地开发总文档.md  09-发布与工作流操作文档.md
src/: app.rs  main.rs  models.rs  prototype.rs  routes.rs  state.rs
src/api/: ai_agent.rs  ai_tasks.rs  client.rs  files.rs  http.rs  members.rs  mock.rs  mod.rs  search.rs  types.rs
src/components/: layout.rs  sidebar.rs  topbar.rs
src/pages/: ai_agent.rs  ai_tasks.rs  ai_tools.rs  change_requests.rs  dashboard.rs  developer.rs  docs.rs  editor.rs  files.rs  git_sync.rs  install.rs  language.rs  login.rs  members.rs  mod.rs  notifications.rs  profile.rs  search.rs  seo.rs  settings.rs  space_overview.rs  spaces.rs  sso.rs  tags.rs  templates.rs  versions.rs  workspace.rs
tools/: spa_server.py
