[package]
name = "souldoc_frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
dioxus = { version = "0.7.5", features = ["router", "web"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.6.0", features = ["http"] }
