[package]
name = "soulbook_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "=0.7.4", features = ["web", "router"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = { version = "0.5", features = ["http"] }
gloo-storage = "0.3"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Storage", "Location"] }
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
